2009-10-29 21:06  Mateusz Loskot <mateusz@loskot.net>

	* [r2710] tests/unit/operation/buffer/BufferOpTest.cpp: Testing
	  linker problem with DEFAULT_QUADRANT_SEGMENT constant

2009-10-29 20:58  Mateusz Loskot <mateusz@loskot.net>

	* [r2709] tests/unit/operation/buffer/BufferOpTest.cpp: Testing
	  linker problem with DEFAULT_QUADRANT_SEGMENT constant

2009-10-29 20:55  Mateusz Loskot <mateusz@loskot.net>

	* [r2708] tests/unit/operation/buffer/BufferOpTest.cpp: Fixed CRLF
	  to LF in BufferOpTest.cpp

2009-10-29 20:47  Mateusz Loskot <mateusz@loskot.net>

	* [r2707] ChangeLog, tests/unit/operation/buffer/BufferOpTest.cpp:
	  Missing include of BufferParameters.h header in BufferOpTest.cpp
	  unit suite

2009-10-29 16:20  Mateusz Loskot <mateusz@loskot.net>

	* [r2706] ChangeLog, tests/unit/operation/buffer/BufferOpTest.cpp:
	  Added more test cases for buffer calculation based on A (input)
	  geometries from XMLTester's buffer.xml and
	  TestBufferExternal2.xml tests.

2009-10-29 15:11  Mateusz Loskot <mateusz@loskot.net>

	* [r2705] ChangeLog, tests/unit/operation/buffer/BufferOpTest.cpp:
	  Added test case for buffer of multipolygon from XMLTester's
	  buffer.xml, case #25 but with custom quadrant segments

2009-10-29 14:24  Mateusz Loskot <mateusz@loskot.net>

	* [r2704] ChangeLog, tests/unit/operation/buffer/BufferOpTest.cpp:
	  Added test case for buffer of POINT(0 0) with distance 1.0 and 32
	  quadrant segments.

2009-10-29 12:33  Mateusz Loskot <mateusz@loskot.net>

	* [r2703] ChangeLog, build/msvc90/geos_unit/geos_unit.vcproj,
	  tests/unit/Makefile.am, tests/unit/operation/buffer,
	  tests/unit/operation/buffer/BufferOpTest.cpp: *
	  tests/unit/operation/buffer: added unit test case for BufferOp,
	  * tests/unit/Makefile.am: added new test case source to Makefile,
	  * build/msvc90/geos_unit/geos_unit.vcproj: updated Visual C++
	  project.

2009-10-28 12:09  Mateusz Loskot <mateusz@loskot.net>

	* [r2702] ChangeLog, build/msvc90/geos.sln,