@@ -66,6 +66,10 @@
 #include <string>
 #include <memory>
 
+#ifdef _MSC_VER
+#pragma warning(disable : 4099)
+#endif
+
 // Some extra magic to make type declarations in geos_c.h work - 
 // for cross-checking of types in header.
 #define GEOSGeometry geos::geom::Geometry
